--- a/src/app/demo/components/header-screen/header-screen.component.html
+++ b/src/app/demo/components/header-screen/header-screen.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-content-between align-items-center mb-3">
+<div class="grid justify-content-between align-items-center mb-3 p-3">
     <h3>{{ title }}</h3>
     <p-button [label]="buttonLabel" icon="pi pi-plus" (click)="showModal()"></p-button>
 </div>
