--- a/src/app/demo/pages/uikit/cadastroproduto/cadastroproduto.component.html
+++ b/src/app/demo/pages/uikit/cadastroproduto/cadastroproduto.component.html
@@ -1,113 +1,144 @@
 <div class="grid">
-	<div class="col-12">
-		<div class="card">
-			<app-header-screen title="Cadastro de produto" buttonLabel="Cadastrar Produto" [modalContent]="modalTemplate" [modalWidth]="modalWidth">
-				<ng-template #modalTemplate>
-					<form>
-						<div class="p-fluid grid mt-3">
-							<div class="field col-12 md:col-4">
-								<label for="productName">Product Name</label>
-								<input id="productName" type="text" pInputText>
-							</div>
-							<div class="field col-12 md:col-4">
-								<label for="productCategory">Product Category</label>
-								<input id="productCategory" type="text" pInputText>
-							</div>
-							<div class="field col-12 md:col-4">
-								<label for="productPrice">Product Price</label>
-								<input id="productPrice" type="number" pInputText>
-							</div>
-							<div class="field col-12">
-								<label for="productDescription">Product Description</label>
-								<textarea id="productDescription" rows="5" cols="30" placeholder="Your Message" pInputTextarea></textarea>
-							</div>
-						</div>
-					</form>
-				</ng-template>
-			</app-header-screen>
-			<p-dataView #dv [value]="products" [paginator]="true" [rows]="9" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
-				<ng-template pTemplate="header">
-					<div class="flex flex-column md:flex-row md:justify-content-between gap-2">
-						<p-dropdown [options]="sortOptions" placeholder="Sort By Price" (onChange)="onSortChange($event)"></p-dropdown>
-						<span class="p-input-icon-left">
+    <div class="col-12">
+        <div class="card px-6 py-6">
+			<app-header-screen title="Cadastro de Produto" buttonLabel="Cadastrar Produto" (click)="openNew()" />
+            <p-toast></p-toast>
+            <p-table #dt [value]="products" [columns]="cols" responsiveLayout="scroll" [rows]="10" [globalFilterFields]="['name','code','price','category']" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true" dataKey="id">
+                <ng-template pTemplate="caption">
+                    <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
+                        <h5 class="m-0">Gerencie Produtos</h5>
+                        <span class="block mt-2 md:mt-0 p-input-icon-left">
                             <i class="pi pi-search"></i>
-                            <input type="search" pInputText placeholder="Search by Name" (input)="onFilter(dv, $event)">
-                        </span>	
-						<p-dataViewLayoutOptions></p-dataViewLayoutOptions>
-					</div>
-				</ng-template>
+                            <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search..."  class="w-full sm:w-auto"/>
+                        </span>
+                    </div>
+                </ng-template>
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th pSortableColumn="code">Código <p-sortIcon field="code"></p-sortIcon></th>
+                        <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
+                        <th pSortableColumn="price">Preço <p-sortIcon field="price"></p-sortIcon></th>
+                        <th pSortableColumn="category">Categoria <p-sortIcon field="category"></p-sortIcon></th>
+                        <th>Triagem</th>
+                        <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
+                        <th></th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-product>
+                    <tr>
+                        <td style="width:16%; min-width:10rem;"><span class="p-column-title">Código</span>
+                            {{product.code || product.id}}
+                        </td>
+                        <td style="width:23%; min-width:10rem;">
+                            <span class="p-column-title">Nome</span>
+                            {{product.name}}
+                        </td>
+                        <td style="width:16%; min-width:8rem;">
+                            <span class="p-column-title">Preço</span>
+                            {{product.price | currency:'BRL'}}
+                        </td>
+                        <td style="width:16%; min-width:10rem;">
+                            <span class="p-column-title">Categoria</span>
+                            {{product.category}}
+                        </td>
+                        <td style="width:16%; min-width: 10rem;"><span class="p-column-title">Status</span>
+							<app-cbadge [status]="product.inventoryStatus"></app-cbadge>
+                        </td>
+                        <td>
+                            <div class="flex">
+                                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editProduct(product)"></button>
+                                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button>
+                            </div>
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
 
-				<ng-template let-products pTemplate="listItem">
-					<div class="col-12" *ngFor="let product of products">
-						<div class="flex flex-column md:flex-row align-items-center p-3 w-full">
-							<img [src]="'assets/demo/images/product/' + product.image" [alt]="product.name" class="my-4 md:my-0 w-9 md:w-10rem shadow-2 mr-5"/>
-							<div class="flex-1 flex flex-column align-items-center text-center md:text-left">
-								<div class="font-bold text-2xl">{{product.name}}</div>
-								<div class="mb-2">{{product.description}}</div>
-								<p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false" styleClass="mb-2"></p-rating>
-								<div class="flex align-items-center mt-2">
-									<i class="pi pi-tag mr-2"></i>
-									<span class="font-semibold">{{product.category}}</span>
-								</div>
-							</div>
-							<div class="flex flex-row md:flex-column justify-content-between w-full md:w-auto align-items-center md:align-items-end mt-5 md:mt-0">
-								<span class="text-2xl font-semibold mb-2 align-self-center md:align-self-end">${{product.price}}</span>
-								<p-button icon="pi pi-shopping-cart" label="Add to Cart" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'" styleClass="mb-2 p-button-sm"></p-button>
-								<span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span>
-							</div>
-						</div>
-					</div>
-				</ng-template>
+        <p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Product Details" [modal]="true" class="p-fluid">
+            <ng-template pTemplate="content">
+                <img [src]="'assets/demo/images/product/' + product.image" [alt]="product.image" width="150" class="mt-0 mx-auto mb-5 block shadow-2" *ngIf="product.image">
+                <div class="field">
+                    <label for="name">Nome</label>
+                    <input type="text" pInputText id="name" [(ngModel)]="product.name" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"/>
+                    <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.name">Name is required.</small>
+                </div>
+                <div class="field">
+                    <label for="description">Descrição</label>
+                    <textarea id="description" pInputTextarea [(ngModel)]="product.description" required rows="3" cols="20"></textarea>
+                </div>
+                <div class="field">
+                    <label for="status">Triagem</label>
+                    <p-dropdown [(ngModel)]="product.inventoryStatus" inputId="inventoryStatus" optionValue="label" [options]="statuses" placeholder="Select">
+                        <ng-template pTemplate="selectedItem">
+                            <app-cbadge [status]="product.inventoryStatus"></app-cbadge>
+                        </ng-template>
+                        <ng-template let-option pTemplate="item">
+                            <app-cbadge [status]="option.label"></app-cbadge>
+                        </ng-template>
+                    </p-dropdown>
+                </div>
 
-				<ng-template let-products pTemplate="gridItem">
-					<div class="grid grid-nogutter">
-					<div class="col-12 md:col-4" *ngFor="let product of products">
-						<div class="card m-3 border-1 surface-border">
-							<div class="flex flex-wrap gap-2 align-items-center justify-content-between mb-2">
-								<div class="flex align-items-center">
-									<i class="pi pi-tag mr-2"></i>
-									<span class="font-semibold">{{product.category}}</span>
-								</div>
-								<span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span>
-							</div>
-							<div class="flex flex-column align-items-center text-center mb-3">
-								<img [src]="'assets/demo/images/product/' + product.image" [alt]="product.name" class="w-9 shadow-2 my-3 mx-0"/>
-								<div class="text-2xl font-bold">{{product.name}}</div>
-								<div class="mb-3">{{product.description}}</div>
-								<p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>
-							</div>
-							<div class="flex align-items-center justify-content-between">
-								<span class="text-2xl font-semibold">${{product.price}}</span>
-								<p-button icon="pi pi-shopping-cart" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></p-button>
-							</div>
-						</div>
-					</div>
-					</div>
-				</ng-template>
-			</p-dataView>
-		</div>
-	</div>
+                <div class="field">
+                    <label class="mb-3">Categoria</label>
+                    <div class="formgrid grid">
+                        <div class="field-radiobutton col-6">
+                            <p-radioButton id="category1" name="category" value="Frutas" [(ngModel)]="product.category"></p-radioButton>
+                            <label for="category1">Frutas</label>
+                        </div>
+                        <div class="field-radiobutton col-6">
+                            <p-radioButton id="category2" name="category" value="Vegetais" [(ngModel)]="product.category"></p-radioButton>
+                            <label for="category2">Vegetais</label>
+                        </div>
+                        <div class="field-radiobutton col-6">
+                            <p-radioButton id="category3" name="category" value="Legumes" [(ngModel)]="product.category"></p-radioButton>
+                            <label for="category3">Legumes</label>
+                        </div>
+                        <div class="field-radiobutton col-6">
+                            <p-radioButton id="category4" name="category" value="Soja" [(ngModel)]="product.category"></p-radioButton>
+                            <label for="category4">Soja</label>
+                        </div>
+                    </div>
+                </div>
 
-	<div class="col-12 xl:col-8">
-		<div class="card">
-			<h5>PickList</h5>
-			<p-pickList [source]="sourceCities" [target]="targetCities" sourceHeader="From" targetHeader="To" [dragdrop]="true"
-						[responsive]="true" [sourceStyle]="{'height':'250px'}" [targetStyle]="{'height':'250px'}">
-				<ng-template let-city pTemplate="item">
-					<div>{{city.name}}</div>
-				</ng-template>
-			</p-pickList>
-		</div>
-	</div>
+                <div class="formgrid grid">
+                    <div class="field col">
+                        <label for="price">Price</label>
+                        <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="BRL" locale="pt-BR"></p-inputNumber>
+                    </div>
+                    <div class="field col">
+                        <label for="quantity">Quantity</label>
+                        <p-inputNumber id="quantity" [(ngModel)]="product.quantity"></p-inputNumber>
+                    </div>
+                </div>
+            </ng-template>
 
-	<div class="col-12 xl:col-4">
-		<div class="card">
-			<h5>OrderList</h5>
-			<p-orderList [value]="orderCities" header="Cities" [dragdrop]="true" [listStyle]="{'height':'250px'}">
-				<ng-template let-city pTemplate="item">
-					<div>{{city.name}}</div>
-				</ng-template>
-			</p-orderList>
-		</div>
-	</div>
+            <ng-template pTemplate="footer">
+                <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
+                <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveProduct()"></button>
+            </ng-template>
+        </p-dialog>
+
+        <p-dialog [(visible)]="deleteProductDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
+            <div class="flex align-items-center justify-content-center">
+                <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
+                <span *ngIf="product">Are you sure you want to delete <b>{{product.name}}</b>?</span>
+            </div>
+            <ng-template pTemplate="footer">
+                <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No" (click)="deleteProductDialog = false"></button>
+                <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes" (click)="confirmDelete()"></button>
+            </ng-template>
+        </p-dialog>
+
+        <p-dialog [(visible)]="deleteProductsDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
+            <div class="flex align-items-center justify-content-center">
+                <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
+                <span>Are you sure you want to delete selected products?</span>
+            </div>
+            <ng-template pTemplate="footer">
+                <button pButton pRipple icon="pi pi-times" class="p-button-text" label="No" (click)="deleteProductsDialog = false"></button>
+                <button pButton pRipple icon="pi pi-check" class="p-button-text" label="Yes" (click)="confirmDeleteSelected()"></button>
+            </ng-template>
+        </p-dialog>
+    </div>
 </div>
