--- a/src/assets/layout/styles/layout/layout.css
+++ b/src/assets/layout/styles/layout/layout.css
@@ -373,7 +373,7 @@ a {
 }
 
 @media screen and (min-width: 1960px) {
-  .layout-main, .landing-wrapper {
+  .layout-main {
     width: 1504px;
     margin-left: auto !important;
     margin-right: auto !important;
