--- a/src/app/demo/pages/uikit/cadastrofornecedor/cadastrofornecedor.component.html
+++ b/src/app/demo/pages/uikit/cadastrofornecedor/cadastrofornecedor.component.html
@@ -9,7 +9,7 @@
                         <h5 class="m-0">Gerencie Produtos</h5>
                         <span class="block mt-2 md:mt-0 p-input-icon-left">
                             <i class="pi pi-search"></i>
-                            <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search..."  class="w-full sm:w-auto"/>
+                            <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Pesquisar"  class="w-full sm:w-auto"/>
                         </span>
                     </div>
                 </ng-template>
@@ -17,9 +17,8 @@
                     <tr>
                         <th pSortableColumn="code">Código <p-sortIcon field="code"></p-sortIcon></th>
                         <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
-                        <th pSortableColumn="price">Preço <p-sortIcon field="price"></p-sortIcon></th>
-                        <th pSortableColumn="category">Categoria <p-sortIcon field="category"></p-sortIcon></th>
-                        <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
+                        <th pSortableColumn="inventoryStatus">CPF/CNPJ <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
+                        <th pSortableColumn="name">Contato <p-sortIcon field="category"></p-sortIcon></th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
@@ -31,12 +30,12 @@
                             <span class="p-column-title">Nome</span>
                             {{product.name}}
                         </td>
-                        <td style="width:25%; min-width:8rem;">
-                            <span class="p-column-title">Preço</span>
-                            {{product.price | currency:'BRL'}}
+                        <td style="width:25%; min-width:10rem;">
+                            <span class="p-column-title">CPF/CNPJ</span>
+                            {{product.description}}
                         </td>
                         <td style="width:25%; min-width:10rem;">
-                            <span class="p-column-title">Categoria</span>
+                            <span class="p-column-title">Contato</span>
                             {{product.category}}
                         </td>
                         <td>
@@ -50,7 +49,7 @@
             </p-table>
         </div>
 
-        <p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Product Details" [modal]="true" class="p-fluid">
+        <p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Novo Fornecedor" [modal]="true" class="p-fluid">
             <ng-template pTemplate="content">
                 <div class="field">
                     <label for="name">Nome</label>
@@ -58,40 +57,19 @@
                     <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.name">Name is required.</small>
                 </div>
                 <div class="field">
-                    <label for="description">Descrição</label>
-                    <textarea id="description" pInputTextarea [(ngModel)]="product.description" required rows="3" cols="20"></textarea>
+                    <label for="description">Código</label>
+                    <input type="text" pInputText id="name" [(ngModel)]="product.code" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.code}"/>
+                    <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.code">Name is required.</small>
                 </div>
                 <div class="field">
-                    <label class="mb-3">Categoria</label>
-                    <div class="formgrid grid">
-                        <div class="field-radiobutton col-6">
-                            <p-radioButton id="category1" name="category" value="Frutas" [(ngModel)]="product.category"></p-radioButton>
-                            <label for="category1">Frutas</label>
-                        </div>
-                        <div class="field-radiobutton col-6">
-                            <p-radioButton id="category2" name="category" value="Vegetais" [(ngModel)]="product.category"></p-radioButton>
-                            <label for="category2">Vegetais</label>
-                        </div>
-                        <div class="field-radiobutton col-6">
-                            <p-radioButton id="category3" name="category" value="Legumes" [(ngModel)]="product.category"></p-radioButton>
-                            <label for="category3">Legumes</label>
-                        </div>
-                        <div class="field-radiobutton col-6">
-                            <p-radioButton id="category4" name="category" value="Soja" [(ngModel)]="product.category"></p-radioButton>
-                            <label for="category4">Soja</label>
-                        </div>
-                    </div>
+                    <label for="description">CPF/CNPJ</label>
+                    <input type="text" pInputText id="name" [(ngModel)]="product.description" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.description}"/>
+                    <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Name is required.</small>
                 </div>
 
-                <div class="formgrid grid">
-                    <div class="field col">
-                        <label for="price">Price</label>
-                        <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="BRL" locale="pt-BR"></p-inputNumber>
-                    </div>
-                    <div class="field col">
-                        <label for="quantity">Quantity</label>
-                        <p-inputNumber id="quantity" [(ngModel)]="product.quantity"></p-inputNumber>
-                    </div>
+                <div class="field">
+                    <label for="quantity">Contato</label>
+                    <input type="text" pInputText id="name" [(ngModel)]="product.category" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.category}"/>
                 </div>
             </ng-template>
 
