ajustando cadastro de produto e fornecedor, criando pagina de recebimento

--- a/src/app/demo/pages/uikit/cadastroproduto/cadastroproduto.component.html
+++ b/src/app/demo/pages/uikit/cadastroproduto/cadastroproduto.component.html
@@ -20,7 +20,7 @@
                         <th pSortableColumn="category">Unidade Medida <p-sortIcon field="category"></p-sortIcon></th>
                         <th>Triagem</th>
                         <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
-                        <th></th>
+                        <th>Ações</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
