--- a/src/app/demo/pages/uikit/cadastrofornecedor/cadastrofornecedor.component.html
+++ b/src/app/demo/pages/uikit/cadastrofornecedor/cadastrofornecedor.component.html
@@ -19,6 +19,7 @@
                         <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
                         <th pSortableColumn="inventoryStatus">CPF/CNPJ <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
                         <th pSortableColumn="name">Contato <p-sortIcon field="category"></p-sortIcon></th>
+                        <th>Ações</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
