--- a/src/app/demo/pages/uikit/recebimento/recebimento.component.html
+++ b/src/app/demo/pages/uikit/recebimento/recebimento.component.html
@@ -1,7 +1,7 @@
 <div class="grid">
     <div class="col-12">
         <div class="card px-6 py-6">
-			<app-header-screen title="Cadastro de Produto" buttonLabel="Cadastrar Produto" (click)="openNew()" />
+			<app-header-screen title="Recebimento" buttonLabel="Novo Recebimento" (click)="openNew()" />
             <p-toast></p-toast>
             <p-table #dt [value]="products" [columns]="cols" responsiveLayout="scroll" [rows]="10" [globalFilterFields]="['name','code','price','category']" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
@@ -15,29 +15,34 @@
                 </ng-template>
                 <ng-template pTemplate="header">
                     <tr>
-                        <th pSortableColumn="code">Código <p-sortIcon field="code"></p-sortIcon></th>
                         <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
                         <th pSortableColumn="category">Unidade Medida <p-sortIcon field="category"></p-sortIcon></th>
+                        <th pSortableColumn="description">Fornecedor Responsável<p-sortIcon field="description"></p-sortIcon></th>
                         <th>Triagem</th>
-                        <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
-                        <th></th>
+                        <th pSortableColumn="date">Data Recebimento<p-sortIcon field="date"></p-sortIcon></th>
+                        <th>Ações</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
                     <tr>
-                        <td style="width:25%; min-width:10rem;"><span class="p-column-title">Código</span>
-                            {{product.code || product.id}}
-                        </td>
-                        <td style="width:25%; min-width:10rem;">
+                        <td style="width:20%; min-width:10rem;">
                             <span class="p-column-title">Nome</span>
                             {{product.name}}
                         </td>
-                        <td style="width:25%; min-width:10rem;">
-                            <span class="p-column-title">Categoria</span>
+                        <td style="width:20%; min-width:10rem;">
+                            <span class="p-column-title">Unidade Medida</span>
                             {{product.category}}
                         </td>
-                        <td style="width:25%; min-width: 10rem;"><span class="p-column-title">Status</span>
+                        <td style="width:20%; min-width:10rem;">
+                            <span class="p-column-title">Fornecedor Responsável</span>
+                            {{product.description}}
+                        </td>
+                        <td style="width:17%; min-width: 10rem;"><span class="p-column-title">Status</span>
 							<app-cbadge [status]="product.inventoryStatus"></app-cbadge>
+                        </td>
+                        <td style="width:23%; min-width:10rem;">
+                            <span class="p-column-title">Data Recebimento</span>
+                            {{product.date}}
                         </td>
                         <td>
                             <div class="flex">
