--- a/src/app/demo/pages/uikit/overlays/overlaysdemo.component.html
+++ b/src/app/demo/pages/uikit/overlays/overlaysdemo.component.html
@@ -60,11 +60,11 @@
     <div class="col-12 lg:col-6">
         <div class="card p-fluid">
             <h5>Confirmation</h5>
-            <p-confirmDialog header="Confirmation" key="confirm1" icon="pi pi-exclamation-triangle" message="Are you sure you want to proceed?"
+            <p-confirmDialog header="Confirmation" key="confirm1" icon="pi pi-exclamation-triangle" message="Tem certeza de que deseja prosseguir?"
                              [style]="{width: '350px'}" acceptButtonStyleClass="p-button-text" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
             <div class="grid">
                 <div class="col-12">
-                    <button type="text" (click)="confirm1()" pButton icon="pi pi-trash" label="Delete" class="p-button-danger" style="width:auto;"></button>
+                    <button type="text" (click)="confirm1()" pButton icon="pi pi-trash" label="Editar" class="p-button-danger" style="width:auto;"></button>
                 </div>
             </div>
         </div>
