--- a/src/app/demo/pages/uikit/panels/panelsdemo.component.html
+++ b/src/app/demo/pages/uikit/panels/panelsdemo.component.html
@@ -4,7 +4,7 @@
             <h5>Toolbar</h5>
             <p-toolbar>
                 <div class="p-toolbar-group-left flex flex-wrap">
-                    <button pButton type="button" label="New" icon="pi pi-plus" class="mr-2"></button>
+                    <button pButton type="button" label="Novo" icon="pi pi-plus" class="mr-2"></button>
                     <button pButton type="button" label="Open" icon="pi pi-folder-open" class="p-button-secondary mr-2"></button>
 
                     <i class="pi pi-bars p-toolbar-separator"></i>
