--- a/src/app/demo/pages/uikit/button/buttondemo.component.html
+++ b/src/app/demo/pages/uikit/button/buttondemo.component.html
@@ -53,7 +53,7 @@
 			<h5>Button Set</h5>
 			<span class="p-buttonset">
 				<button pButton pRipple label="Save" icon="pi pi-check"></button>
-				<button pButton pRipple label="Delete" icon="pi pi-trash"></button>
+				<button pButton pRipple label="Editar" icon="pi pi-trash"></button>
 			</span>
 		</div>
 
