--- a/src/app/demo/pages/uikit/input/inputdemo.component.html
+++ b/src/app/demo/pages/uikit/input/inputdemo.component.html
@@ -155,7 +155,7 @@
 
 		<div class="card">
 			<h5>ToggleButton</h5>
-			<p-toggleButton [(ngModel)]="valToggle" onLabel="Yes" offLabel="No" [style]="{'width': '10em'}"></p-toggleButton>
+			<p-toggleButton [(ngModel)]="valToggle" onlabel="Sim" offlabel="Não" [style]="{'width': '10em'}"></p-toggleButton>
 
 			<h5>SelectOneButton</h5>
 			<p-selectButton [options]="paymentOptions" [(ngModel)]="valSelect1" optionLabel="name"></p-selectButton>
