nova versão do recebimento

--- a/src/app/demo/components/badge/cbadge.component.html
+++ b/src/app/demo/components/badge/cbadge.component.html
@@ -1,1 +1,1 @@
-<span [class]="'product-badge status-' + (status ? status.toLowerCase() : '')">{{ getStatusLabel() }}</span>
+<span [class]="'customer-badge product-badge status-' + getStatusColor()">{{ getStatusLabel() }}</span>
