--- a/src/app/demo/pages/dashboard/dashboard.component.html
+++ b/src/app/demo/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="grid">
-    <div class="col-12 lg:col-6 xl:col-3">
+    <div class="col-12 md:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
@@ -15,7 +15,7 @@
             <span class="text-500">desde a última visita</span>
         </div>
     </div>
-    <div class="col-12 lg:col-6 xl:col-3">
+    <div class="col-12 md:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
@@ -31,7 +31,7 @@
             <span class="text-500">desde a última semana</span>
         </div>
     </div>
-    <div class="col-12 lg:col-6 xl:col-3">
+    <div class="col-12 md:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
@@ -47,7 +47,7 @@
             <span class="text-500">novos registrados</span>
         </div>
     </div>
-    <div class="col-12 lg:col-6 xl:col-3">
+    <div class="col-12 md:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
@@ -212,7 +212,7 @@
                         class="w-3rem h-3rem flex align-items-center justify-content-center bg-orange-100 border-circle mr-3 flex-shrink-0">
                         <i class="pi pi-download text-xl text-orange-500"></i>
                     </div>
-                    <span class="text-700 line-height-3">Seu pedido de saque de <span
+                    <span class="text-700 line-height-3">O pedido de saque de <span
                             class="text-blue-500 font-medium">R$2500</span> foi iniciado.</span>
                 </li>
             </ul>
@@ -232,16 +232,15 @@
                 <li class="flex align-items-center py-2 border-bottom-1 surface-border">
                     <div
                         class="w-3rem h-3rem flex align-items-center justify-content-center bg-pink-100 border-circle mr-3 flex-shrink-0">
-                        <i class="pi pi-question text-xl text-pink-500"></i>
+                        <i class="pi pi-stopwatch text-xl text-pink-500"></i>
                     </div>
-                    <span class="text-900 line-height-3">Maria Oliveira<span class="text-700"> postou uma nova pergunta
-                            sobre seu produto.</span></span>
+                    <span class="text-900 line-height-3">Maria Oliveira<span class="text-700"> inicou a triagem
+                            dos alfaces</span></span>
                 </li>
             </ul>
         </div>
 
-        <div class="px-4 py-5 shadow-2 flex flex-column md:flex-row md:align-items-center justify-content-between mb-3"
-            [ngStyle]="{borderRadius: '1rem'}">
+        <div class="card px-4 py-5 flex flex-column md:flex-row md:align-items-center justify-content-between mb-3">
             <div>
                 <div class="font-medium text-2xl mt-2 mb-3">FIQUE POR DENTRO</div>
                 <div class="font-medium text-xl">Estatísticas mais detalhadas das vendas</div>
